bk_ida/gccida/c3/print_value
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_value/src/sched-vis.c:1249:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*( unsigned __int8 *)v32] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_value/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_value/src/sched-vis.c:1341:15: error: use of undeclared identifier 'off_73B17B'
sprintf( v73, off_73B17B, *( _DWORD *)&x[1]); 
              ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_value/src/obj/sched-vis.o] Error 1
